welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:6: error: not found: value faireMotif
faireMotif();
^